--- a/network-packet-linux.cabal
+++ b/network-packet-linux.cabal
@@ -25,6 +25,7 @@ bug-reports:         https://github.com/rolsdorph/network-packet-linux/issues
 category:            Network
 build-type:          Configure
 extra-source-files:  cabal.project
+                     CHANGELOG.md
                      configure config.status configure.ac
                      include/LinuxDef.h include/PacketLinuxConfig.h.in
                      vendor/network/Network/Socket/ReadShow.hs
