--- a/network-packet-linux.cabal
+++ b/network-packet-linux.cabal
@@ -3,19 +3,27 @@ name:                network-packet-linux
 version:             0.1.0.0
 synopsis:            Types for working with Linux packet sockets
 description:
-    @network-packet-linux@ provides types that makes it possible to use the
-    @network@ package with Linux packet sockets. Packet sockets are described
+    @network-packet-linux@ makes it possible to use
+    the [network package](https://hackage.haskell.org/package/network)
+    with Linux packet sockets. Packet sockets are described
     in [packet (7)](https://man7.org/linux/man-pages/man7/packet.7.html).
-
+    .
+    === Usage
+    Combine functions from "Network.Socket.Address" with types from "Network.Socket.Linux" in order to
+    work with packet sockets.
+    .
+    See the "Network.Socket.Linux" module documentation or @examples/ListenToInterface.hs@ for an example.
+    .
+    === About the package
     As of version 3.0.0, the @network@ package provides a socket API that is
-    implemented in terms of the @SocketAddress@ typeclass.
-    @network-packet-linux@ provides @SockAddrLl@, a @SocketAddress@ instance
-    that maps to the @sockaddr_ll@ struct.
-
+    implemented in terms of the 'SocketAddress' typeclass.
+    @network-packet-linux@ provides 'SockAddrLl', a 'SocketAddress' instance
+    that corresponds to the @sockaddr_ll@ struct from @\<linux/if_packet.h\>@.
+    .
     Additionally, @network-packet-linux@ provides some convenience types:
-    @ProtocolId@ (an enumeration of the Ethernet protocol IDs defined in
-    @<linux/if_ether.h>@) and @PacketType@ (enumerating the packet types
-    defined in @<linux/if_packet.h>@).
+    'ProtocolId' (an enumeration of the Ethernet protocol IDs defined in
+    @\<linux/if_ether.h\>@) and 'PacketType' (enumerating the packet types
+    defined in @\<linux/if_packet.h\>@).
 license:             BSD-3-Clause
 license-file:        LICENSE
 maintainer:          Mads Rolsdorph
