--- a/vendored-network/vendored-network.cabal
+++ b/vendored-network/vendored-network.cabal
@@ -10,5 +10,5 @@ build-type:          Simple
 library
   hs-source-dirs:      ../vendor/network
   exposed-modules:     Network.Socket.ReadShow
-  build-depends:       base ^>=4.13.0.0
+  build-depends:       base >= 4.12 && < 5,
   default-language:    Haskell2010
