Remove config.status from extra-source-files
It's generated as part of the build

--- a/network-packet-linux.cabal
+++ b/network-packet-linux.cabal
@@ -34,7 +34,7 @@ category:            Network
 build-type:          Configure
 extra-source-files:  cabal.project
                      CHANGELOG.md
-                     configure config.status configure.ac
+                     configure configure.ac
                      include/LinuxDef.h include/PacketLinuxConfig.h.in
                      vendor/network/Network/Socket/ReadShow.hs
                      vendor/network/tests/Network/Test/Common.hs
