--- a/network-packet-linux.cabal
+++ b/network-packet-linux.cabal
@@ -9,7 +9,7 @@ description:
     in [packet (7)](https://man7.org/linux/man-pages/man7/packet.7.html).
     .
     === Usage
-    Combine functions from "Network.Socket.Address" with types from "Network.Socket.Linux" in order to
+    Combine functions from [Network.Socket.Address](https://hackage.haskell.org/package/network/docs/Network-Socket-Address.html#g:2) with types from "Network.Socket.Linux" in order to
     work with packet sockets.
     .
     See the "Network.Socket.Linux" module documentation or @examples/ListenToInterface.hs@ for an example.
